--- a/components/organisms/footer/footer.styles.scss
+++ b/components/organisms/footer/footer.styles.scss
@@ -1,218 +1,179 @@
-@import '~/styles/colors';
-@import '~/styles/_breakpoints';
-@import '~/styles/helpers/_layout';
-@import '~/styles/helpers/_typography';
+@import "~/styles/colors";
+@import "~/styles/_breakpoints";
+@import "~/styles/helpers/_layout";
+@import "~/styles/helpers/_typography";
 
+$name: "ga-footer";
+$block: "." + $name;
 
-$name: 'ga-footer';
-$block: '.' + $name;
+// footer
+$background: #101010;
+$footer-padding-y-desktop: 83px;
+$footer-padding-x-desktop: 40px;
 
+$footer-padding-y-desktop-small: 58px;
+$footer-padding-x-desktop-small: 40px;
 
-$content-padding-mobile: 80px 20px 80px;
-$content-padding-tablet: 99px 50px 100px 0;
-$content-padding-desktop: 120px 100px 120px 0;
+$footer-padding-y-tablet: 100px;
+$footer-padding-x-tablet: 45px;
+$footer-padding-y-mobile: 50px;
+$footer-padding-x-mobile: 20px;
 
+// container
+$container-max-width: 1530px;
+$container-margin-bottom-tablet: 20px;
 
-$image-width-tablet: 310px;
-$image-width-desktop: 362px;
+// icon
+$icon-size-desktop: 90px;
+$icon-size-desktop-small: 75px;
+$icon-size-tablet: 61px;
+$icon-size-mobile: 55px;
 
-$image-offset-tablet: -340px;
-$image-offset-desktop: -523px;
+// content
+$content-margin-top-mobile: 40px;
+$content-row-gap-mobile: 9px;
 
-$image-transform-tablet: translateY(-10px);
-$image-transform-desktop: translateY(-13px);
+// title
+$title-color: color("surface", "inverse");
+$title-font-weight-bold: 500;
+$title-line-height: 22.4px;
 
-
-$title-font-size-mobile: 60px;
-$title-font-size-tablet: 70px;
-$title-font-size-desktop: 80px;
-
-$title-line-height-mobile: 0.9;
-$title-line-height-tablet: 0.9;
-$title-line-height-desktop: 0.9;
-
-
-$subtitle-max-width: 500px;
-
-$subtitle-font-size-mobile: 16px;
-$subtitle-font-size-tablet: 18px;
-$subtitle-font-size-desktop: 18px;
-
-$subtitle-line-height-mobile: 1.6;
-$subtitle-line-height-tablet: 1.6;
-$subtitle-line-height-desktop: 1.6;
-
-$subtitle-offset-mobile: 22px;
-$subtitle-offset-tablet: 20px;
-$subtitle-offset-desktop: 19px;
-
-
-$markets-offset-mobile: 30px;
-$markets-offset-tablet: 50px;
-$markets-offset-desktop: 55px;
-
-
-$market-offset-mobile: 18px;
-$market-offset-tablet: 14px;
-$market-offset-desktop: 34px;
-
-
-$market-icon-height-mobile: 18px;
-$market-icon-height-tablet: 18px;
-$market-icon-height-desktop: 30px;
-
+// description
+$description-font-weight: 400;
+$description-column-gap-desktop: 15px;
+$description-margin-top-desktop: 9px;
+$description-font-size: 14px;
+$description-row-gap-mobile: 7px;
+$description-max-width-mobile: 400px;
 
 #{$block} {
   @include bp-all {
     & {
-      background: linear-gradient(to bottom, color('surface', 'base'), #282828);
-      color: color('surface', 'inverse');
-      overflow: hidden;
+      color: #fff;
+      background: $background;
+      box-sizing: border-box;
     }
 
+    &__container {
+      margin: 0 auto;
+    }
+
+    &__icon {
+      flex-shrink: 0;
+      background: #fff;
+    }
+
+    &__title,
+    &__description {
+      line-height: $title-line-height;
+    }
+
+    &__title {
+      font-weight: $title-font-weight-bold;
+    }
+
+    &__description {
+      font-weight: $description-font-weight;
+      display: flex;
+    }
+
+    &__link {
+      color: $title-color;
+      text-decoration: none;
+    }
+  }
+
+  @include bp-from($bp-widescreen-small) {
+    & {
+      padding: $footer-padding-y-desktop $footer-padding-x-desktop;
+    }
+
+    &__icon {
+      width: $icon-size-desktop;
+      height: $icon-size-desktop;
+    }
+  }
+
+  @include bp-between($bp-desktop-small, $bp-widescreen-small) {
+    & {
+      padding: $footer-padding-y-desktop-small $footer-padding-x-desktop-small;
+    }
+
+    &__icon {
+      width: $icon-size-desktop-small;
+      height: $icon-size-desktop-small;
+    }
+  }
+
+  @include bp-from($bp-desktop-tilda) {
+    &__container {
+      display: flex;
+      align-items: center;
+      flex-wrap: wrap;
+      margin: 0 auto;
+    }
+  }
+
+  @include bp-till($bp-desktop-tilda) {
     &__content {
-      position: relative;
+      margin-top: $content-margin-top-mobile;
+    }
+  }
+
+  @include bp-from($bp-desktop-small) {
+    &__container {
+      max-width: $container-max-width;
+      justify-content: space-between;
+    }
+  }
+
+  @include bp-between($bp-tablet, $bp-desktop-small) {
+    & {
+      padding: $footer-padding-y-tablet $footer-padding-x-tablet;
     }
 
-    &__image {
-      position: absolute;
-      user-select: none;
+    &__container {
+      margin-bottom: $container-margin-bottom-tablet;
     }
 
-    &__title {
-      color: color('surface', 'brand');
-      font-family: $font-family-accent;
-
-      font-weight: 500;
+    &__icon {
+      width: $icon-size-tablet;
+      height: $icon-size-tablet;
     }
+  }
 
-    &__title {
-      margin: 0;
-    }
-
-    &__subtitle {
-      max-width: $subtitle-max-width;
+  @include bp-from($bp-tablet) {
+    &__description {
+      max-width: $description-max-width-mobile;
+      column-gap: $description-column-gap-desktop;
+      margin-top: $description-margin-top-desktop;
     }
   }
 
   @include bp-till($bp-tablet) {
+    & {
+      padding: $footer-padding-y-mobile $footer-padding-x-mobile;
+    }
+
+    &__icon {
+      width: $icon-size-mobile;
+      height: $icon-size-mobile;
+    }
+
     &__content {
-      padding: $content-padding-mobile;
-    }
-
-    &__image {
-      display: none;
-    }
-
-    &__title {
-      font-size: $title-font-size-mobile;
-      line-height: $title-line-height-mobile;
-    }
-
-    &__subtitle {
-      font-size: $subtitle-font-size-mobile;
-      line-height: $subtitle-line-height-mobile;
-      margin: $subtitle-offset-mobile 0 0;
-    }
-
-    &__subtitle_type_desktop {
-      display: none;
-    }
-
-    &__markets {
       display: flex;
+      flex-direction: column;
+      row-gap: $content-row-gap-mobile;
     }
 
-    &__markets {
-      margin: $markets-offset-mobile 0 0;
+    &__description {
+      flex-direction: column;
+      row-gap: $description-row-gap-mobile;
+      font-size: $description-font-size;
     }
 
-    &__market + &__market {
-      margin: 0 0 0 $market-offset-mobile;
-    }
-
-    &__market-icon {
-      height: $market-icon-height-mobile;
-    }
-  }
-
-  @include bp-between($bp-tablet, $bp-desktop-large) {
-    &__content {
-      padding: $content-padding-tablet;
-      margin: 0 0 0 50%;
-    }
-
-    &__image {
-      width: $image-width-tablet;
-      left: $image-offset-tablet;
-      transform: $image-transform-tablet;
-    }
-
-    &__title {
-      font-size: $title-font-size-tablet;
-      line-height: $title-line-height-tablet;
-    }
-
-    &__subtitle {
-      font-size: $subtitle-font-size-tablet;
-      line-height: $subtitle-line-height-tablet;
-      margin: $subtitle-offset-tablet 0 0;
-    }
-
-    &__subtitle_type_mobile {
+    &__slash {
       display: none;
-    }
-
-    &__markets {
-      margin: $markets-offset-tablet 0 0;
-    }
-
-    &__market + &__market {
-      margin: 0 0 0 $market-offset-tablet;
-    }
-
-    &__market-icon {
-      height: $market-icon-height-tablet;
-    }
-  }
-
-  @include bp-from($bp-desktop-large) {
-    &__content {
-      padding: $content-padding-desktop;
-      margin: 0 0 0 50%;
-    }
-
-    &__image {
-      width: $image-width-desktop;
-      left: $image-offset-desktop;
-      transform: $image-transform-desktop;
-    }
-
-    &__title {
-      font-size: $title-font-size-desktop;
-      line-height: $title-line-height-desktop;
-    }
-
-    &__subtitle {
-      font-size: $subtitle-font-size-desktop;
-      line-height: $subtitle-line-height-desktop;
-      margin: $subtitle-offset-desktop 0 0;
-    }
-
-    &__subtitle_type_mobile {
-      display: none;
-    }
-
-    &__markets {
-      margin: $markets-offset-desktop 0 0;
-    }
-
-    &__market + &__market {
-      margin: 0 0 0 $market-offset-desktop;
-    }
-
-    &__market-icon {
-      height: $market-icon-height-desktop;
     }
   }
 }
