--- a/styles/_fonts.scss
+++ b/styles/_fonts.scss
@@ -3,10 +3,10 @@
   font-style: normal;
   font-weight: normal;
 
-  src: local('GraphikLCG-Regular'), local('Graphik LCG Regular'),
-    local('Graphik-LCG-Regular'),
-    url('~/assets/fonts/GraphikLCG-Regular.woff2') format('woff2'),
-    url('~/assets/fonts/GraphikLCG-Regular.woff') format('woff');
+  src: local("GraphikLCG-Regular"), local("Graphik LCG Regular"),
+    local("Graphik-LCG-Regular"),
+    url("~/assets/fonts/GraphikLCG-Regular.woff2") format("woff2"),
+    url("~/assets/fonts/GraphikLCG-Regular.woff") format("woff");
   font-display: swap;
 }
 
@@ -15,21 +15,31 @@
   font-style: normal;
   font-weight: 500;
 
-  src: local('GraphikLCG-Medium'), local('Graphik LCG Medium'),
-    local('Graphik-LCG-Medium'),
-    url('~/assets/fonts/GraphikLCG-Medium.woff2') format('woff2'),
-    url('~/assets/fonts/GraphikLCG-Medium.woff') format('woff');
+  src: local("GraphikLCG-Medium"), local("Graphik LCG Medium"),
+    local("Graphik-LCG-Medium"),
+    url("~/assets/fonts/GraphikLCG-Medium.woff2") format("woff2"),
+    url("~/assets/fonts/GraphikLCG-Medium.woff") format("woff");
   font-display: swap;
 }
 
-
 @font-face {
-  font-family: 'Druk Cy';
+  font-family: "Druk Cy";
   font-style: normal;
   font-weight: 500;
   font-display: block;
 
-  src: local('Druk Cy Medium'), local('Druk-Cy-Medium'),
-  url('~/assets/fonts/DrukCy-Medium.woff2') format('woff2'),
-  url('~/assets/fonts/DrukCy-Medium.woff') format('woff');
+  src: local("Druk Cy Medium"), local("Druk-Cy-Medium"),
+    url("~/assets/fonts/DrukCy-Medium.woff2") format("woff2"),
+    url("~/assets/fonts/DrukCy-Medium.woff") format("woff");
+}
+
+@font-face {
+  font-family: DrukText;
+  font-style: normal;
+  font-weight: 500;
+  font-display: block;
+
+  src: local("Druk Wide Bold"), local("DrukText-Medium"),
+    url("~/assets/fonts/DrukText-Medium.woff2") format("woff2"),
+    url("~/assets/fonts/DrukText-Medium.woff") format("woff");
 }
