--- a/styles/helpers/_typography.scss
+++ b/styles/helpers/_typography.scss
@@ -1,7 +1,7 @@
-$font-family-primary: 'GraphikLCG', 'Helvetica', 'Arial', sans-serif;
-$font-family-accent: 'Druk Cy', 'Helvetica', 'Arial', sans-serif;
+$font-family-primary: "GraphikLCG", "Helvetica", "Arial", sans-serif;
+$font-family-accent: "Druk Cy", "Helvetica", "Arial", sans-serif;
 
-$font-family-secondary: 'Inter', sans-serif;
+$font-family-secondary: "DrukText", sans-serif;
 
 $line-height-primary: 1.4;
 
