--- a/styles/_variables.scss
+++ b/styles/_variables.scss
@@ -1,4 +1,4 @@
-$font-family-primary: 'GraphikLCG', 'Helvetica', 'Arial', sans-serif;
+$font-family-primary: "GraphikLCG", "Helvetica", "Arial", sans-serif;
 
 $line-height-primary: 1.5;
 
@@ -6,8 +6,10 @@ $font-family: $font-family-primary;
 $line-height: $line-height-primary;
 $min-content-width: 320px;
 
-$selection-color: color('surface', 'inverse');
-$selection-background: color('surface', 'accent');
+$grid-inner: 1530px;
+
+$selection-color: color("surface", "inverse");
+$selection-background: color("surface", "accent");
 
 $map-z-index: (
   header: 999,
