--- a/components/organisms/header/header.style.scss
+++ b/components/organisms/header/header.style.scss
@@ -104,7 +104,7 @@ $burger-close-top-mobile: -4px;
       justify-content: space-between;
       max-width: $grid-inner;
       margin: 0 auto;
-      position: fixed;
+      position: absolute;
       top: 0;
       right: 0;
       left: 0;
