--- a/components/organisms/header/header.style.scss
+++ b/components/organisms/header/header.style.scss
@@ -143,6 +143,29 @@ $burger-close-top-mobile: -4px;
       position: relative;
       z-index: 1;
     }
+
+    &__nav-link {
+      position: relative;
+
+      &:after {
+        content: "";
+        display: block;
+        width: 0;
+        height: 2px;
+        position: absolute;
+        left: 1px;
+        right: 1px;
+        bottom: 0;
+        background: #fff;
+        transition: 0.15s ease-in-out;
+      }
+
+      &:hover {
+        &:after {
+          width: 100%;
+        }
+      }
+    }
   }
 
   @include bp-from($bp-widescreen-small) {
@@ -253,11 +276,12 @@ $burger-close-top-mobile: -4px;
     }
 
     &__nav-link {
-      letter-spacing: $link-letter-spacing-tablet;
-    }
-
-    &__nav-link {
       font-family: $font-family-accent;
+      letter-spacing: $link-letter-spacing-tablet;
+
+      &:after {
+        display: none;
+      }
     }
 
     &__desktop {
